--- a/steps/draft-appeals/template.html
+++ b/steps/draft-appeals/template.html
@@ -15,30 +15,33 @@
 
     <br>
 
-{% for caseId, draft in drafts %}
+    <div class="form-buttons-group">
+        <a class="govuk-button" href="/new-appeal">Create new Application</a>
+    </div>
+
+    {% for caseId, draft in drafts %}
 
     {{ header(appellantName(draft) | safe, size='m') }}
-    <table class="govuk-table">
-        <caption class="govuk-visually-hidden">Table Caption</caption>
-        <thead class="govuk-table__head">
-        <tr class="govuk-table__row">
-            <th class="govuk-table__header" scope="col">Appeal Reference</th>
-            <th class="govuk-table__header" scope="col">Benefit</th>
-            <th class="govuk-table__header" scope="col">MRN Date</th>
-            <th class="govuk-table__header" scope="col">Action</th>
-        </tr>
-        </thead>
-        <tbody class="govuk-table__body">
+        <table class="govuk-table">
+            <caption class="govuk-visually-hidden">Table Caption</caption>
+            <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="col">Appeal Reference</th>
+                <th class="govuk-table__header" scope="col">Benefit</th>
+                <th class="govuk-table__header" scope="col">MRN Date</th>
+                <th class="govuk-table__header" scope="col">Action</th>
+            </tr>
+            </thead>
+            <tbody class="govuk-table__body">
 
-        <tr class="govuk-table__row">
-            <td class="govuk-table__cell">{{ caseId }}</td>
-            <td class="govuk-table__cell">{{ benefit(draft) }}</td>
-            <td class="govuk-table__cell">{{ mrnDate(draft) }}</td>
-            <td class="govuk-table__cell"><a href="/edit-appeal?caseId={{ caseId }}">Edit</a></td>
-        </tr>
-
-        </tbody>
-    </table>
-{% endfor %}
+            <tr class="govuk-table__row">
+                <td class="govuk-table__cell">{{ caseId }}</td>
+                <td class="govuk-table__cell">{{ benefit(draft) }}</td>
+                <td class="govuk-table__cell">{{ mrnDate(draft) }}</td>
+                <td class="govuk-table__cell"><a href="/edit-appeal?caseId={{ caseId }}">Edit</a></td>
+            </tr>
+            </tbody>
+        </table>
+    {% endfor %}
 
 {%- endblock %}
