--- a/steps/draft-appeals/template.html
+++ b/steps/draft-appeals/template.html
@@ -21,6 +21,11 @@
         <a class="govuk-button" href="/new-appeal">{{ content.buttons.create | safe }}</a>
     </div>
 
+    <style> .equal-width-twenty th { width: 20%; } </style>
+    <style> .equal-width-forty th { width: 40%; } </style>
+    <style> .equal-width-twenty-five th { width: 25%; } </style>
+    <style> .equal-width-fifteen th { width: 15%; } </style>
+
     {% for caseId, draft in drafts %}
 
         {{ header(appellantName(draft) | safe, size='m') }}
@@ -29,17 +34,17 @@
             <caption class="govuk-visually-hidden">Table Caption</caption>
             <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th class="govuk-table__header" scope="col" width="20%">{{ content.tableHeadings.appealRef | safe }}</th>
-                <th class="govuk-table__header" scope="col" width="40%">{{ content.tableHeadings.benefit | safe }}</th>
-                <th class="govuk-table__header" scope="col" width="25%">{{ content.tableHeadings.mrnDate | safe }}</th>
-                <th class="govuk-table__header" scope="col" width="15%">{{ content.tableHeadings.action | safe }}</th>
+                <th class="govuk-table__header" scope="col" class ="equal-width-twenty">{{ content.tableHeadings.appealRef | safe }}</th>
+                <th class="govuk-table__header" scope="col" class ="equal-width-forty">{{ content.tableHeadings.benefit | safe }}</th>
+                <th class="govuk-table__header" scope="col" class ="equal-width-twenty-five">{{ content.tableHeadings.mrnDate | safe }}</th>
+                <th class="govuk-table__header" scope="col" class ="equal-width-fifteen">{{ content.tableHeadings.action | safe }}</th>
             </tr>
             </thead>
             <tbody class="govuk-table__body">
 
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell">{{ caseId }}</td>
-                <td class="govuk-table__cell">{{ benefit(draft) }}</td>
+                <td class="govuk-table__cell">{{ content.benefitTypes[benefit(draft)] }}</td>
                 <td class="govuk-table__cell">{{ mrnDate(draft) }}</td>
                 <td class="govuk-table__cell">
                     <a href="/edit-appeal?caseId={{ caseId }}">{{ content.buttons.edit | safe }}</a>
