--- a/steps/reasons-for-appealing/evidence-upload/template.html
+++ b/steps/reasons-for-appealing/evidence-upload/template.html
@@ -28,6 +28,10 @@
 
 {% block listItems %}
     <p class="govuk-body">{{ content.description | safe }}</p>
+    <p class="govuk-body">{{ content.description2 | safe }}</p>
+    {% if mediaFilesNotAllowed %}
+        <p class="govuk-body">{{ content.description2 | safe }}</p>
+    {% endif %}
     <div id="evidence-upload"></div>
 
     {{ header(content.itemsListLabel, size='s') }}
