--- a/steps/reasons-for-appealing/evidence-upload/template.html
+++ b/steps/reasons-for-appealing/evidence-upload/template.html
@@ -29,7 +29,7 @@
 {% block listItems %}
     <p class="govuk-body">{{ content.description | safe }}</p>
     <p class="govuk-body">{{ content.description2 | safe }}</p>
-    {% if mediaFilesNotAllowed %}
+    {% if mediaFilesAllowed %}
         <p class="govuk-body">{{ content.description2 | safe }}</p>
     {% endif %}
     <div id="evidence-upload"></div>
