Independence welsh translation is different on page

--- a/steps/start/independence/template.html
+++ b/steps/start/independence/template.html
@@ -27,10 +27,17 @@
                 {% block fields %}
                     {% if allowUC and benefitType == 'UC' %}
                         <p class="govuk-body-l">{{ content.UCreviewed | safe }}</p>
+                    {% elseif allowDLA and benefitType == 'DLA' %}
+                        <p class="govuk-body-l">{{ content.DLAreviewed | safe }}</p>
                     {% else %}
                         <p class="govuk-body-l">{{ content.reviewed | safe }}</p>
                     {% endif %}
-                    <p class="govuk-body-l">{{ content.separate | safe }}</p>
+
+                    {% if allowDLA and benefitType == 'DLA' %}
+                        <p class="govuk-body-l">{{ content.DLAseparate | safe }}</p>
+                    {% else %}
+                        <p class="govuk-body-l">{{ content.separate | safe }}</p>
+                    {% endif %}
                 {% endblock %}
 
                 <input class="govuk-button" type="submit" value="{{ commonContent[htmlLang].continue | safe }}">
