SSCS-8756 - Independence and SSCS-8759 - MRN page (#1102)
* SSCS-8756 - Independence and MRN page

--- a/steps/start/independence/template.html
+++ b/steps/start/independence/template.html
@@ -27,6 +27,8 @@
                 {% block fields %}
                     {% if allowUC and benefitType == 'UC' %}
                         <p class="govuk-body-l">{{ content.UCreviewed | safe }}</p>
+                    {% elseif allowDLA and benefitType == 'DLA' %}
+                        <p class="govuk-body-l">{{ content.DLAreviewed | safe }}</p>
                     {% else %}
                         <p class="govuk-body-l">{{ content.reviewed | safe }}</p>
                     {% endif %}
