Revert "copy dwp issuing office esa for dla"
This reverts commit 2aec38e8ac89cc81069bba3cba6d3ec4ad623f89.

--- a/steps/start/independence/template.html
+++ b/steps/start/independence/template.html
@@ -32,7 +32,12 @@
                     {% else %}
                         <p class="govuk-body-l">{{ content.reviewed | safe }}</p>
                     {% endif %}
-                    <p class="govuk-body-l">{{ content.separate | safe }}</p>
+
+                    {% if allowDLA and benefitType == 'DLA' %}
+                        <p class="govuk-body-l">{{ content.DLAseparate | safe }}</p>
+                    {% else %}
+                        <p class="govuk-body-l">{{ content.separate | safe }}</p>
+                    {% endif %}
                 {% endblock %}
 
                 <input class="govuk-button" type="submit" value="{{ commonContent[htmlLang].continue | safe }}">
