added dla content for have-contacted-dwp page

--- a/steps/compliance/have-contacted-dwp/template.html
+++ b/steps/compliance/have-contacted-dwp/template.html
@@ -7,6 +7,10 @@
     {% set selectionButtonYesLabel = content.fields.haveContactedUCDWP.yes | safe %}
     {% set selectionButtonNoLabel = content.fields.haveContactedUCDWP.no | safe %}
     {% set contentTitle =  content.ucTitle %}
+{% elif allowDLA and benefitType == 'DLA' %}
+    {% set selectionButtonYesLabel = content.fields.haveContactedDWP.yes | safe %}
+    {% set selectionButtonNoLabel = content.fields.haveContactedDWP.no | safe %}
+    {% set contentTitle = content.dlaTitle %}
 {% else %}
     {% set selectionButtonYesLabel = content.fields.haveContactedDWP.yes | safe %}
     {% set selectionButtonNoLabel = content.fields.haveContactedDWP.no | safe %}
