SSCS-8792 Carers Allowance Steps Handling

--- a/steps/compliance/contact-dwp/template.html
+++ b/steps/compliance/contact-dwp/template.html
@@ -16,7 +16,7 @@
     {{ header(content.title, size="l") }}
 
     <p class="govuk-body">{{ content.requestingMandatoryReconsideration | safe }}</p>
-    {% if allowUC and benefitType == 'UC' %}
+    {% if benefitType == 'UC' %}
         <p class="govuk-body">{{ content.linkUCJournal | safe }}</p>
     {% else %}
         <p class="govuk-body">{{ content.contactDetailsFromLettersOrEmails | safe }}</p>
