--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -17,7 +17,7 @@
             { label: content.benefitTypes.aa,  value: 'Attendance Allowance' },
             { label: content.benefitTypes.bb,  value: 'Bereavement Benefit' },
             { label: content.benefitTypes.bs,  value: 'Bereavement Support Payment Scheme' },
-            { label: content.benefitTypes.ca,  value: "Carer's Allowance" },
+            { label: content.benefitTypes.carersallowance,  value: "Carer's Allowance" },
             { label: content.benefitTypes.cb,  value: 'Child Benefit Lone Parent' },
             { label: content.benefitTypes.cr,  value: 'Compensation Recovery Unit' },
             { label: content.benefitTypes.co,  value: 'Contracted Out Employment Group' },
