--- a/steps/reasons-for-appealing/reason-for-appealing/template.html
+++ b/steps/reasons-for-appealing/reason-for-appealing/template.html
@@ -60,6 +60,9 @@
     {% if benefitCode == 'DLA' %}
         <p class="govuk-body">{{ content.dwpExplainedDLA | safe }}</p>
         <p class="govuk-body">{{ content.readYouMRNDLA | safe }}</p>
+    {% elif isBenefitEnabled('allowCA') and benefitCode == 'carersAllowance' %}
+        <p class="govuk-body">{{ content.dwpExplainedCarersAllowance | safe }}</p>
+        <p class="govuk-body">{{ content.readYouMRNCarersAllowance | safe }}</p>
     {% else %}
         <p class="govuk-body">{{ content.dwpExplained | safe }}</p>
         <p class="govuk-body">{{ content.readYouMRN | safe }}</p>
@@ -71,6 +74,9 @@
     {% if benefitCode == 'DLA' %}
         <p class="govuk-body">{{ content.dwpExplainedDLA | safe }}</p>
         <p class="govuk-body">{{ content.readYouMRNDLA | safe }}</p>
+    {% elif isBenefitEnabled('allowCA') and benefitCode == 'carersAllowance' %}
+        <p class="govuk-body">{{ content.dwpExplainedCarersAllowance | safe }}</p>
+        <p class="govuk-body">{{ content.readYouMRNCarersAllowance | safe }}</p>
     {% else %}
         <p class="govuk-body">{{ content.dwpExplained | safe }}</p>
         <p class="govuk-body">{{ content.readYouMRN | safe }}</p>
