--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -14,7 +14,7 @@
         hideLabel = true,
         options = [
             { label: content.benefitTypes.cc,  value: '30 Hours Free Childcare Scheme' },
-            { label: content.benefitTypes.aa,  value: 'Attendance Allowance' },
+            { label: content.benefitTypes.attendanceallowance,  value: 'Attendance Allowance' },
             { label: content.benefitTypes.bb,  value: 'Bereavement Benefit' },
             { label: content.benefitTypes.bs,  value: 'Bereavement Support Payment Scheme' },
             { label: content.benefitTypes.carersallowance,  value: "Carer's Allowance" },
