--- a/steps/start/independence/template.html
+++ b/steps/start/independence/template.html
@@ -26,13 +26,13 @@
 
                 {% block fields %}
                     {% if benefitType == 'UC' %}
-                        <p class="govuk-body-l">{{ content.UCreviewed | safe }}</p>
-                    {% elseif benefitType == 'carersAllowance' %}
-                        <p class="govuk-body-l">{{ content.CAreviewed | safe }}</p>
-                    {% elseif benefitType == 'attendanceAllowance' %}
-                        <p class="govuk-body-l">{{ content.AAreviewed | safe }}</p>
+                        <p class="govuk-body-l">{{ content.reviewed_UC | safe }}</p>
+                    {% elseif hasNoAcronym && !containsBenefit %}
+                        <p class="govuk-body-l">{{ content.reviewed_non_acronym | safe }}</p>
+                    {% elseif hasNoAcronym && containsBenefit %}
+                        <p class="govuk-body-l">{{ content.reviewed_contains_benefit | safe }}</p>
                     {% else %}
-                        <p class="govuk-body-l">{{ content.reviewed | safe }}</p>
+                        <p class="govuk-body-l">{{ content.reviewed_acronym | safe }}</p>
                     {% endif %}
                     <p class="govuk-body-l">{{ content.separate | safe }}</p>
                 {% endblock %}
