--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -15,7 +15,7 @@
         options = [
             { label: content.benefitTypes.cc,  value: '30 Hours Free Childcare Scheme' },
             { label: content.benefitTypes.attendanceallowance,  value: 'Attendance Allowance' },
-            { label: content.benefitTypes.bb,  value: 'Bereavement Benefit' },
+            { label: content.benefitTypes.bereavementbenefit,  value: 'Bereavement Benefit' },
             { label: content.benefitTypes.bs,  value: 'Bereavement Support Payment Scheme' },
             { label: content.benefitTypes.carersallowance,  value: "Carer's Allowance" },
             { label: content.benefitTypes.cb,  value: 'Child Benefit Lone Parent' },
