SSCS-8814: IIDB (SYA)- Update: Check your answers page

--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -30,7 +30,7 @@
             { label: content.benefitTypes.ib,  value: 'Incapacity Benefit' },
             { label: content.benefitTypes.is,  value: 'Income Support' },
             { label: content.benefitTypes.id,  value: 'Industrial Death Benefit' },
-            { label: content.benefitTypes.iid, value: 'Industrial Injuries Disablement Benefit' },
+            { label: content.benefitTypes.industrialinjuriesdisablement, value: 'Industrial Injuries Disablement Benefit' },
             { label: content.benefitTypes.jsa, value: 'Job Seekers Allowance (JSA)' },
             { label: content.benefitTypes.ma,  value: 'Maternity Allowance' },
             { label: content.benefitTypes.pc,  value: 'Pension Credits' },
