SSCS-8947 Maternity Allowance feature

--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -32,7 +32,7 @@
             { label: content.benefitTypes.id,  value: 'Industrial Death Benefit' },
             { label: content.benefitTypes.industrialinjuriesdisablement, value: 'Industrial Injuries Disablement Benefit' },
             { label: content.benefitTypes.jsa, value: 'Job Seekers Allowance (JSA)' },
-            { label: content.benefitTypes.ma,  value: 'Maternity Allowance' },
+            { label: content.benefitTypes.maternityallowance,  value: 'Maternity Allowance' },
             { label: content.benefitTypes.pc,  value: 'Pension Credits' },
             { label: content.benefitTypes.pip, value: 'Personal Independence Payment (PIP)' },
             { label: content.benefitTypes.rp,  value: 'Retirement Pension' },
