SSCS-8965 - SYA - Mrn date and Try again button on welsh duplicate error page requires translation

--- a/steps/errors/duplicate-error/DuplicateError.html
+++ b/steps/errors/duplicate-error/DuplicateError.html
@@ -11,7 +11,7 @@
 
 <p class="govuk-body" >{{ content.message | safe }}</p>
 
-<a class="govuk-button" href="/start-an-appeal">Try again</a>
+<a class="govuk-button" href="/start-an-appeal">{{ content.tryAgain | safe}}</a>
 
 <p class="govuk-body" >{{ content.messageContactUs | safe }}</p>
 
