SSCS - 9061 - allow Social Fund in SYA

--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -37,7 +37,7 @@
             { label: content.benefitTypes.pip, value: 'Personal Independence Payment (PIP)' },
             { label: content.benefitTypes.rp,  value: 'Retirement Pension' },
             { label: content.benefitTypes.sda, value: 'Severe Disablement Allowance' },
-            { label: content.benefitTypes.sf,  value: 'Social Fund' },
+            { label: content.benefitTypes.socialfund,  value: 'Social Fund' },
             { label: content.benefitTypes.tfc, value: 'Tax-Free Childcare Scheme' },
             { label: content.benefitTypes.tc,  value: 'Tax Credits' },
             { label: content.benefitTypes.uc,  value: 'Universal Credit (UC)' }
