SSCS-8800 - Allow Income Support Submissions Online

--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -28,7 +28,7 @@
             { label: content.benefitTypes.hrp, value: 'Home Responsibilities Protection' },
             { label: content.benefitTypes.hb,  value: 'Housing Benefit (HB)' },
             { label: content.benefitTypes.ib,  value: 'Incapacity Benefit' },
-            { label: content.benefitTypes.is,  value: 'Income Support' },
+            { label: content.benefitTypes.incomeSupport,  value: 'Income Support' },
             { label: content.benefitTypes.id,  value: 'Industrial Death Benefit' },
             { label: content.benefitTypes.industrialinjuriesdisablement, value: 'Industrial Injuries Disablement Benefit' },
             { label: content.benefitTypes.jsa, value: 'Job Seekers Allowance (JSA)' },
