--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -16,7 +16,7 @@
             { label: content.benefitTypes.cc,  value: '30 Hours Free Childcare Scheme' },
             { label: content.benefitTypes.attendanceallowance,  value: 'Attendance Allowance' },
             { label: content.benefitTypes.bereavementbenefit,  value: 'Bereavement Benefit' },
-            { label: content.benefitTypes.bs,  value: 'Bereavement Support Payment Scheme' },
+            { label: content.benefitTypes.bereavementsupportpaymentscheme,  value: 'Bereavement Support Payment Scheme' },
             { label: content.benefitTypes.carersallowance,  value: "Carer's Allowance" },
             { label: content.benefitTypes.cb,  value: 'Child Benefit Lone Parent' },
             { label: content.benefitTypes.cr,  value: 'Compensation Recovery Unit' },
@@ -29,13 +29,13 @@
             { label: content.benefitTypes.hb,  value: 'Housing Benefit (HB)' },
             { label: content.benefitTypes.ib,  value: 'Incapacity Benefit' },
             { label: content.benefitTypes.incomesupport,  value: 'Income Support' },
-            { label: content.benefitTypes.id,  value: 'Industrial Death Benefit' },
+            { label: content.benefitTypes.industrialdeathbenefit,  value: 'Industrial Death Benefit' },
             { label: content.benefitTypes.industrialinjuriesdisablement, value: 'Industrial Injuries Disablement Benefit' },
             { label: content.benefitTypes.jsa, value: 'Job Seekers Allowance (JSA)' },
             { label: content.benefitTypes.maternityallowance,  value: 'Maternity Allowance' },
-            { label: content.benefitTypes.pc,  value: 'Pension Credits' },
+            { label: content.benefitTypes.pensioncredits,  value: 'Pension Credits' },
             { label: content.benefitTypes.pip, value: 'Personal Independence Payment (PIP)' },
-            { label: content.benefitTypes.rp,  value: 'Retirement Pension' },
+            { label: content.benefitTypes.retirementpension,  value: 'Retirement Pension' },
             { label: content.benefitTypes.sda, value: 'Severe Disablement Allowance' },
             { label: content.benefitTypes.socialfund,  value: 'Social Fund' },
             { label: content.benefitTypes.tfc, value: 'Tax-Free Childcare Scheme' },
