sscs 9368 user gets a warning when archiving

--- a/steps/draft-appeals/template.html
+++ b/steps/draft-appeals/template.html
@@ -48,7 +48,7 @@
                 <td class="govuk-table__cell">{{ mrnDate(draft) }}</td>
                 <td class="govuk-table__cell">
                     <a href="/edit-appeal?caseId={{ caseId }}">{{ content.buttons.edit | safe }}</a>
-                    <a href="/archive-appeal?caseId={{ caseId }}">{{ content.buttons.archive }}</a></td>
+                    <a href="javascript:if (confirm('{{ content.buttons.warnMessage }}')) {window.location.assign('/archive-appeal?caseId={{ caseId }}')}">{{ content.buttons.archive }}</a></td>
             </tr>
             </tbody>
         </table>
