--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -33,7 +33,7 @@
             { label: content.benefitTypes.industrialinjuriesdisablement, value: 'Industrial Injuries Disablement Benefit' },
             { label: content.benefitTypes.jsa, value: 'Job Seekers Allowance (JSA)' },
             { label: content.benefitTypes.maternityallowance,  value: 'Maternity Allowance' },
-            { label: content.benefitTypes.pensioncredits,  value: 'Pension Credits' },
+            { label: content.benefitTypes.pensioncredit,  value: 'Pension Credit' },
             { label: content.benefitTypes.pip, value: 'Personal Independence Payment (PIP)' },
             { label: content.benefitTypes.retirementpension,  value: 'Retirement Pension' },
             { label: content.benefitTypes.sda, value: 'Severe Disablement Allowance' },
