SSCS-9739: Vaccine Damage (SSCS 7) - Update: SYA Journey

--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -35,7 +35,8 @@
     { label: content.benefitTypes.tfc, value: 'Tax-Free Childcare Scheme' },
     { label: content.benefitTypes.tc,  value: 'Tax Credits' },
     { label: content.benefitTypes.uc,  value: 'Universal Credit (UC)' },
-    { label: content.benefitTypes.childSupport,  value: 'Child Support' }
+    { label: content.benefitTypes.childSupport,  value: 'Child Support' },
+    { label: content.benefitTypes.vaccineDamage,  value: 'Vaccine Damage' }
 ] %}
 
 {% block fields %}
